--- a/public/css/base.css
+++ b/public/css/base.css
@@ -85,6 +85,10 @@ section.content {
 	padding-bottom: 10px;
 }
 
+.pad-top {
+	padding-top: 10px;
+}
+
 form textarea {
 	min-height: 400px;
 }
@@ -93,6 +97,35 @@ form textarea {
 	border-radius: 3px;
 	padding:10px;
 	text-align: center;
+}
+
+.corner-btn {
+	position:absolute;
+	top:10px;
+	right:10px;
+}
+
+.margin-left {
+	margin-left: 10px;
+}
+
+.margin-top-none {
+	padding-top:0;
+	margin-top:0;
+}
+
+.login-form {
+	display:block;
+	margin:auto;
+	width:400px;
+	border: 1px solid #ccc;
+	padding:25px;
+	padding-bottom: 40px;
+	margin-top:200px;
+}
+
+.btn {
+	min-width: 80px;
 }
 
 @media screen and (max-width:960px) {
