--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,66 +1,108 @@
-body {
+.mobile-title {
+	text-align:center;
+}
+.mobile-title h3 {
+	color:#fff;
 	padding:0;
 	margin:0;
+	padding-top:10px;
+	text-align:center;
 }
 
-a, a:visited {
-	text-decoration: none;
-}
-
-h1 {
-	margin-top:10px;
-	margin-bottom:10px;
-	width:100%;
-	border-bottom: #dedbdb;
-
-}
-
-nav {
-	position:fixed;
-	top: 0;
-	left: 0;
-	width: 90px;
+#mobile-nav-bar {
+	position:relative;
+	height: 50px;
 	background-color: #ff0000;
+	box-shadow: 0 3px 7px rgba(0,0,0,.43);
+	z-index:100;
+}
+
+#mobile-nav {
+	z-index:99;
+	position:relative;
+	background: #ff0000;
+}
+
+#mobile-nav a {
+	color:#fff;
+	display:block;
+	width:100%;
+	height:100%;
+	font-weight:bold;
+	text-align: center;
+}
+
+#mobile-nav-bar .trigger {
+	float:right;
+	margin-top: 5px;
+}
+
+#mobile-nav-bar .btn-default {
+	width:40px;
+	padding:8px;
+	min-width:40px;
+}
+
+#mobile-nav {
+	display:none;
+}
+
+#mobile-nav .row:first-child {
+	border-bottom:1px solid #fff;
+}
+
+#mobile-nav .row .col-md-6:first-child, #mobile-nav .row .col-sm-6:first-child, #mobile-nav .row .col-xs-6:first-child {
+	border-right:1px solid #fff;
+}
+
+#desktop-nav {
+	position:relative;
+	width: 90px;
+	background: #ff0000;
 	height: 100%;
 	box-shadow: 3px 0 10px rgba(0,0,0,.5);
 }
 
-nav ul {
+#desktop-nav ul {
+	position:absolute;
+	left:0;
+	width:100%;
 	list-style: none;
 	padding:0;
 	margin:0;
+	background: #ff0000;
 }
 
-nav ul li {
+#desktop-nav ul li {
 	padding:0;
 	margin:0;
-}
-
-nav ul li:first-child {
 	border-bottom: 1px solid #fff;
 }
 
-nav ul li a {
+#desktop-nav ul li:first-child {
+	height:92px;
+}
+
+#desktop-nav ul li a {
 	display:block;
 	width: 100%;
 	height: 90px;
 	line-height: 90px;
-	border-bottom: 1px solid #fff;
 	text-decoration: none;
 	text-align: center;
 	color: #fff;
 }
 
-nav ul li a:hover, nav ul li a.selected {
+#desktop-nav ul li a:hover, #desktop-nav ul li a.selected {
 	background-color: #ff0000;
 	color: #fff;
 }
 
-nav a {
+#desktop-nav a {
 	font-weight: bold;
 }
 
-nav a.login {
+#desktop-nav a.login {
 	position:absolute;
 	bottom:0;
 	display:block;
@@ -70,15 +112,6 @@ nav a.login {
 	border-top: 1px solid #dedbdb;
 	height: 50px;
 	line-height:  50px;
-}
-
-section.content {
-	position:relative;
-	padding-left: 75px;
-}
-
-.desktop-visible {
-	display:block;
 }
 
 .pad-bottom {
@@ -101,8 +134,8 @@ form textarea {
 
 .corner-btn {
 	position:absolute;
-	top:10px;
-	right:10px;
+	top:22px;
+	right:16px;
 }
 
 .margin-left {
@@ -117,23 +150,21 @@ form textarea {
 .login-form {
 	display:block;
 	margin:auto;
-	width:400px;
+	max-width:400px;
 	border: 1px solid #ccc;
 	padding:25px;
 	padding-bottom: 40px;
-	margin-top:200px;
+	margin-top: 30%;
 }
 
+/* --------------------------------------------------
+bootstrap overrides
+-------------------------------------------------- */
 .btn {
 	min-width: 80px;
 }
 
-@media screen and (max-width:960px) {
-	body{
-		font-size:0.81255em
-	}
-
-	.desktop-visible {
-		display:none;
-	}
+.btn-group-small .btn {
+	min-width: 0;
+	width: 38px;
 }
